wp-content/themes/sixgill/css/custom_2016.css
/* ... */
nav#primary-menu > ul {
	height: 5000px;
}

#menu-background {
	display: none;
	z-index: 9997;
	position: fixed;
	height: 100%;
	width: 100%;
	background: white;
	top: 0;
	left: 0;
}

.resources-background {
	background-color: #eeeeee;
}

.resource-block {
	height: 438px;
	display: inline-block;
	background-color: #ffffff;
}

.resource-title {
	font-size: 24px;
	font-weight: bold;
	text-align: center;
}

.resource-line {
	display: block;
	height: 1px;
	border: 0;
	border-top: 1px solid #e7e7e7;
	width: 100%;
	margin: 0px auto;
	margin-bottom: 12px;
}

.resources-blocks-container {
	text-align: left;
	min-width: 1520px !important;
	display: inline-block;
}

.resource-container {
	padding: 0px;
	margin: 0px auto;
	width: 100%;
	text-align: center;
    height: 110px;
    overflow: hidden;
}

.resource-image-container {
	overflow: hidden;
	background-position: center center !important;
	background-repeat: no-repeat !important;
	background-size: contain !important;
	background-position: center center;
}

.resource-title-container {
	display: table-cell;
	vertical-align: middle;
}

.full-block-width {
	width: 350px;
}

.resources-container {
	text-align: center;
}

.resource-link {
	color: #999999;
}

label {
	text-align: left;
}

.submit-resource-form-button {
	background: url(/wp-content/themes/sixgill/images/td/resources/download_now.png);
	border: 0px;
	height: 67px;
	width: 293px !important;
	max-width: 293px !important;
	font-size: 0px;
}

.yikes-easy-mc-success-message {
	display:none !important;
}

#home-main-text {
	max-width: 650px;
	text-align: left;
}

#home-button-on-video {
	margin: 30px 0px 0px 0px;
}

.max-width-720 {
	max-width:720px;
}

.company-learn-more-text {
	display: none;
}

.companyDescription p {
	margin-bottom: 0px !important;
}

#home-main-text {
	max-width: 650px;
}

@media only screen and (min-width : 992px) {/* For desktop: */

	.global-social-buttons-list {
		margin-left:-16px !important;
	}

	#primary-menu {
		margin-left: 16px;
	}

	.marginShareButton {
		margin-left: 40px;
		list-style-type: none;
	}

	.post-by-author {

	}

	.subscribe-element {
		display: block;
	}

	.blog-container {
		margin-right: 0px;
	}

	.subscribe-block-tablet-mobile {
		display: none;
	}

	.subscribe-block {
		background-color: #fafafa;
		height: 250px;
		max-width: 350px;
		padding: 15px 20px 26px 20px;
		text-align: center;
		font-size: 18px;
		width: 30%
	}

	.subscribe-block h4 {
		font-size: 26px;
		font-weight: bold;
		margin-bottom: 0px;
	}

	.subscribe-email {
		height: 51px;
		margin-bottom: 10px;
		margin-top: 5px;
		text-align: center;
		width: 100%;
	}

	.subscribe-button {
		background-image: url('/wp-content/themes/sixgill/images/td/blog/subscribe_desktop.png');
		max-width: 311px;
		height: 45px;
		width: 100%;
		background-position: center center;
	}

	.mc4wp-success > p {
		font-size: 20px !important;
		color: #999999;
		line-height: 1.5em !important;
	}

	.subscribe-success-title {
		font-size: 24px;
		color: #2e2e2e;
		display: block;
	}

	.slider-caption.slider-caption-center {
		max-width: 900px;
	}

	.slider-caption p {
		margin-bottom: 10px;
		font-size: 36px;
		font-family: "Lato";
		margin-top: 10px;
	}

	.applying-layer-copperOnVideo {
		background-color: rgba(0,0,0,0);
	}

	.backgroundForTextVideoHome {
		background-image:url(/wp-content/themes/sixgill/images/td/home/shadow.png);
		padding: 85px 30px 50px 30px;
		height:380px;
	}

	.sizeForTextVideoHome {
		font-size: 34px;
		font-weight: 900;
	}

	.hidden-bottom-imageDiagram {
		display: none;
	}

	.logoSIXGILL {
		width:140px;
		height:111px;
		background-image:url("/wp-content/themes/sixgill/images/td/logo/logo_desktop.svg");
	}

	.my_titSolutions {
		font-size:30px;
		padding-right:20px;
		text-align:right;
	}

	.my_iconSolution {
		width:115px;
	}

	.my_boxSolution_title {
		display: none;
	}

	.footer_Learn, .footer_Links {
		text-align:left;
		font-size:22px;
	}

	.footer_Schedule {
		text-align:right;
	}

	.home-text-2{
		margin-top:120px;
	}

	.homeSupTit-with-line {
		background-color: #fff;
		z-index:2;
	}

	.widgettitle {
		color: #004FC8;
	}

	.blog-list {
		padding-bottom:55px;
		width: 65%;
	}

	.resources-container {
		padding-top: 29px;
		padding-bottom: 55px;
	}

	.resource-block {
		margin-left: 10px;
		margin-right: 10px;
		margin-top: 13px;
		margin-bottom: 13px;
	}

	.resource-title-container {
		height: 170px;
	}

	.resource-link-container {
			height: 63px;
			padding-bottom: 55px;
	}

	.resource-image-container {
		height: 220px;
	}



}

@media (min-width: 1000px) and (max-width: 1700px) {/* For laptops: */

	.full-block-width {
		width: 250px;
	}

	.resources-blocks-container {
		min-width: 1100px !important;
	}

	.resource-block {
		height: 350px;
	}

	.resource-title-container {
		height: 140px;
	}

	.resource-link-container {
			height: 40px;
	}

	.resource-image-container {
		height: 173px;
	}

	.resource-line {
		margin-bottom: 7px;
	}

}
/* ... */

